--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi
-uvicorn
-sqlalchemy
+fastapi==0.105.0
+uvicorn==0.20.0
+sqlalchemy==2.0.3
 pydantic==1.10.2
 databases
 asyncpg
 passlib
-alembic
+alembic==1.9.2
+bcrypt==3.2.0
+PyJWT==2.4.0
